# sentyalie

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml
src/: discord.rs  epic_client.rs  epic_response.json  main.rs  test.rs
