[package]
name = "sentyalie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version =  "0", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde_json = "*"
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"]}
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4.14"
env_logger = "0.9.0"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
